[tool.poetry]
name = "repl_python3_UwU-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
google-api-python-client = "^2.21.0"
JustWatch = "^0.5.1"
Flask = "^2.0.1"
discord-components = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
